--- a/res/layout/fragment_initial_setup.xml
+++ b/res/layout/fragment_initial_setup.xml
@@ -7,12 +7,14 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_above="@+id/rlButtons"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:gravity="center" >
 
         <TextView
-            android:id="@+id/tvCurrencySymbol"
+            android:id="@+id/textView1"
             style="@style/AddTransactionUI.AmountInput.AmountSymbol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
