Fix issue with layout not centering the EditText

--- a/res/layout/fragment_initial_setup.xml
+++ b/res/layout/fragment_initial_setup.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/rlButtons"
+        android:layout_above="@+id/btnNext"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
