--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -20,6 +20,10 @@
     <color name="dashboard_goal_item_due_date_soon_text">#D0021B</color>
     <color name="dashboard_goal_item_milestones_text">#878787</color>
     
+    <!-- Transactions -->
+    <color name="transactions_item_name_text">#342F33</color>
+    <color name="transactions_item_category_text">#979797</color>
+    
     <!-- Add Transaction -->
     <color name="add_transaction_input_item_display_name">#80FFFFFF</color>
     <color name="add_transaction_input_item_display_value">@color/white</color>
