--- a/res/drawable/gray_border.xml
+++ b/res/drawable/gray_border.xml
@@ -3,7 +3,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/gray" />
+        android:color="@color/transactions_gray_line" />
 
     <solid android:color="@color/white" />
 
