--- a/res/layout/fragment_daily_transactions_detail_chart.xml
+++ b/res/layout/fragment_daily_transactions_detail_chart.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:padding="8dp" >
+
+    <TextView
+        android:id="@+id/tvDetailChartDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <com.echo.holographlibrary.PieGraph
         android:id="@+id/pgTransactionsDetailChart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="16dp" />
+        android:layout_below="@+id/tvDetailChartDate"
+        android:layout_margin="8dp" />
 
 </RelativeLayout>
