--- a/res/layout/fragment_daily_transactions_detail_chart.xml
+++ b/res/layout/fragment_daily_transactions_detail_chart.xml
@@ -15,7 +15,16 @@
         android:id="@+id/pgTransactionsDetailChart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvDetailChartDate"
+        android:layout_below="@+id/gvDetailChartLabel"
         android:layout_margin="8dp" />
+
+    <GridView
+        android:id="@+id/gvDetailChartLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvDetailChartDate"
+        android:numColumns="auto_fit"
+        android:columnWidth="30dp" >
+    </GridView>
 
 </RelativeLayout>
