--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -20,6 +20,11 @@
         <item name="android:homeAsUpIndicator">@drawable/leftarrow_white_button</item>
     </style>
 
+    <!-- TwoWayView Layout style -->
+    <style name="TwoWayView">
+        <item name="android:orientation">horizontal</item>
+    </style>
+
     <!-- Custom SelectDate theme -->
     <style name="Theme.SelectDate" parent="AppBaseTheme">
         <item name="android:editTextStyle">@style/Widget.EditText.White</item>
@@ -137,18 +142,18 @@
         <item name="android:textColor">@color/dashboard_goal_item_milestones_text</item>
         <item name="android:textSize">11sp</item>
     </style>
-    
+
     <!-- Transactions UI -->
-    
+
     <style name="TransactionUI" />
-    
-     <style name="TransactionUI.SpentToday">
+
+    <style name="TransactionUI.SpentToday">
         <item name="fontPath">fonts/OpenSans-Semibold.ttf</item>
         <item name="android:textColor">@color/dashboard_spent_today_text</item>
         <item name="android:textSize">20sp</item>
     </style>
-    
-     <style name="TransactionUI.AggregateLabel">
+
+    <style name="TransactionUI.AggregateLabel">
         <item name="android:textColor">@color/transactions_aggregate_label</item>
         <item name="android:textSize">13sp</item>
         <item name="fontPath">fonts/OpenSans-Light.ttf</item>
@@ -159,7 +164,7 @@
         <item name="android:textColor">@color/transactions_aggregate_value</item>
         <item name="android:textSize">20sp</item>
     </style>
-    
+
     <style name="TransactionUI.TransactionItem" />
 
     <style name="TransactionUI.TransactionItem.Name">
@@ -172,13 +177,13 @@
         <item name="android:textSize">18sp</item>
         <item name="fontPath">fonts/OpenSans-Semibold.ttf</item>
     </style>
-    
+
     <style name="TransactionUI.TransactionItem.NegativeAmount">
         <item name="android:textColor">@color/transactions_item_negative_amount_text</item>
         <item name="android:textSize">18sp</item>
         <item name="fontPath">fonts/OpenSans-Semibold.ttf</item>
     </style>
-    
+
     <style name="TransactionUI.TransactionItem.Category">
         <item name="android:textColor">@color/transactions_item_category_text</item>
         <item name="android:textSize">12sp</item>
