--- a/res/layout/fragment_dashboard.xml
+++ b/res/layout/fragment_dashboard.xml
@@ -62,7 +62,7 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:id="@+id/llMetrics"
+        android:id="@+id/llAddTransaction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -71,83 +71,12 @@
         android:padding="10dp"
         android:showDividers="middle" >
 
-        <LinearLayout
-            android:id="@+id/llSavedTodayProgress"
+        <ImageButton
+            android:id="@+id/btnAddTransaction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical" >
+            android:background="@drawable/add_new_transaction_button" />
 
-            <ProgressBar
-                android:id="@+id/pbSavedTodayLoading"
-                style="@android:attr/progressBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llSavedToday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone" >
-
-            <TextView
-                android:id="@+id/tvSavedTodayLabel"
-                style="@style/DashboardUI.AggregateLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dashboard_saved_today_label" />
-
-            <TextView
-                android:id="@+id/tvSavedToday"
-                style="@style/DashboardUI.AggregateValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/sample_spent_today" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llSpentTodayProgress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical" >
-
-            <ProgressBar
-                android:id="@+id/pbSpentTodayLoading"
-                style="@android:attr/progressBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llSpentToday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone" >
-
-            <TextView
-                android:id="@+id/tvSpentTodayLabel"
-                style="@style/DashboardUI.AggregateLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dashboard_spent_today_label" />
-
-            <TextView
-                android:id="@+id/tvSpentToday"
-                style="@style/DashboardUI.AggregateValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/sample_spent_today" />
-        </LinearLayout>
     </LinearLayout>
 
     <fragment
