--- a/res/layout/activity_lc_details.xml
+++ b/res/layout/activity_lc_details.xml
@@ -53,7 +53,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
         android:layout_below="@+id/relativeLayout1" >
 
         <ListView
@@ -63,13 +62,13 @@
         </ListView>
 
         <com.faizmalkani.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabbutton"
+            android:id="@+id/btnCreatePost"
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:layout_gravity="bottom|right"
             android:layout_marginBottom="16dp"
             android:layout_marginRight="16dp"
-            android:onClick="fabClicked"
+            android:onClick="onCreatePost"
             app:drawable="@drawable/profile_12"
             app:color="#FFDF4D38" />
     </FrameLayout>
