--- a/res/layout/item_goal.xml
+++ b/res/layout/item_goal.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
         android:layout_width="170dp"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/bg_card_no_shadow"
         android:orientation="vertical" >
 
