--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -5,6 +5,20 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <!-- Main Dashboard SpentChart -->
+    <dimen name="spent_chart_text_size">16sp</dimen>
+    <dimen name="spent_chart_axis_title_text_size">14sp</dimen>
+    <dimen name="spent_chart_labels_text_size">14sp</dimen>
+    <dimen name="spent_chart_labels_padding">10dp</dimen>
+    <dimen name="spent_chart_legend_text_size">16sp</dimen>
+    <dimen name="spent_chart_legend_height">40dp</dimen>
+    <dimen name="spent_chart_point">12dp</dimen>
+    <dimen name="spent_chart_line">3dp</dimen>
+    <dimen name="spent_chart_margin_top">10dp</dimen>
+    <dimen name="spent_chart_margin_left">60dp</dimen>
+    <dimen name="spent_chart_margin_right">40dp</dimen>
+    <dimen name="spent_chart_margin_bottom">5dp</dimen>
+
     <!-- Parse -->
     <dimen name="com_parse_ui_horizontal_margin">16dp</dimen>
     <dimen name="com_parse_ui_vertical_margin">16dp</dimen>
