--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -79,6 +79,12 @@
 
     <!-- Dashboard UI -->
     <style name="DashboardUI" />
+    
+    <style name="DashboardUI.CashSpentChartTitle">
+        <item name="android:textColor">@color/dashboard_cash_spent_chart_title_text</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:padding">10dp</item>
+    </style>
 
     <style name="DashboardUI.TotalCash" />
 
